public/res/styles.css
html {
  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
  height: 100%;
  min-height: 100%;
}

body {
  color: #333;
  height: 100%;
  min-height: 100%;
  margin: 0;
  padding: 0;
  padding-top: 20px;
  box-sizing: border-box;
}

header {
  width: 100%;
  height: 20px;
  position: fixed;
  display: inline-block;
  box-sizing: border-box;
  top: 0;
  left: 0;
  background-color: #333;
  color: #FFF;
  padding: 0 5px;
  z-index: 9999;
}

header * {
  font-size: 18px;
  line-height: 20px;
}

h1, h2, h3, h4 {
  margin: 0;
  padding: 0;
}

.title {
  float: left;
}

.score {
  float: right;
}

*:focus {
  outline: 0;
}

.centered-content {
  text-align: center;
  height: 100%;
  position: relative;
  max-width: 500px;
  margin: 0 auto;
}

.button {
  background-color: #333;
  width: 60%;
  display: block;
  border-radius: 5px;
  border: 0;
  margin: 10px auto;
  padding: 5px;
  box-sizing: border-box;

  color: #FFF;
  font-size: 36px;
  text-decoration: none;
}

.l-button {
  height: auto;
  padding: 10px;
  font-size: 24px;
  line-height: 24px;
}

.play-button {
  position: absolute;
  top: 50%;
  margin-top: -24px;
  left: 20%;
}

.play-button:focus, .play-button:active {
  background-color: #F06;
}

.notification {
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.8);
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition: opacity .3s linear;
  opacity: 0;
  pointer-events: none;
}

.visible {
  opacity: 1 !important;
  pointer-events: all;
}

.warning {
  position: absolute;
  left: 0;
  bottom: 14px;
  width: 100%;
  color: #F06;
}

.correct {
  position: absolute;
  margin: 0;
  left: 0;
  top: 0;
  width: 33.3%;
  font-size: 16px;
  background-color: #F06;
}

.hint {
  position: absolute;
  margin: 0;
  left: 33.3%;
  top: 0;
  width: 33.3%;
  font-size: 16px;
  background-color: #39F;
}

.skip {
  position: absolute;
  margin: 0;
  right: 0;
  top: 0;
  width: 33.3%;
  font-size: 16px;
  background-color: #999;
}

.inactive {
  opacity: 0.4;
}

.inputBox {
  box-sizing: border-box;
  width: 100%;
  border: 2px solid black;
  position: absolute;
  bottom: 0;
  left: 0;
  font-size: 20px;
}

.red {
  border: 2px solid #F06;
  background-color: #FCD;
}

.stage {
  box-sizing: border-box;
  padding: 20px;
  position: absolute;
  bottom: 20px;
  left: 20px;
  right: 20px;
}

.emoji-block {
  display: block;
  text-align: left;
  margin: 0;
  font-size: 40px;
}

.hint-block {
  display: block;
  background-color: rgba(255, 255, 255, 0.8);
  margin: 0;
  font-size: 30px;
  letter-spacing: 5px;
  padding: 10px;
  padding-top: 30px;
}

